--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webrunify",
   "version": "0.1.0",
   "description": "Bundle CommonJS code into an ESM module",
+  "main": "index.js",
   "bin": {
     "webrunify": "bin.js"
   },
@@ -9,15 +10,14 @@
     "test": "standard *.js && node bin.js test/source.js > test/dist.js && webrun --allow-require test/run.js"
   },
   "dependencies": {
-    "JSONStream": "^1.3.5",
+    "@babel/core": "^7.1.6",
+    "babelify": "^10.0.0",
     "browser-pack-flat": "github:brechtcs/browser-pack-flat",
     "browserify": "^16.2.3",
-    "minimist": "^1.2.0",
-    "module-deps": "^6.2.0"
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "@rangermauve/webrun": "^3.0.2",
-    "marked": "^0.5.2",
     "standard": "^12.0.1",
     "tape": "^4.9.1"
   },
