--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.1.6",
+    "babel-plugin-transform-commonjs": "^1.1.3",
     "babelify": "^10.0.0",
     "browser-pack-flat": "github:brechtcs/browser-pack-flat",
     "browserify": "^16.2.3",
